# rnotify

./: .gitignore  README.md  pyproject.toml
rnotify/: .main.py.swp  main.py  rnotify.py
rnotify/lib/: file.py  folder.py  notify.py  pid.py  utils.py
tests/: test_rnotify.py
