[tool.poetry]
name = "rnotify"
version = "0.1.0"
description = "Tracking file creation on Linux filesystem."
authors = ["Nicholas A <@edmcboy>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
watchdog = "^2.1.7"
notifiers = "^1.3.3"
click-config-file = "^0.6.0"
pymsteams = "^0.2.1"
discord-webhook = "^0.15.0"
validators = "^0.18.2"
psutil = "^5.9.0"
watchfiles = "^0.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rnotify = "rnotify.main:cli"
rn = "rnotify.main:cli"
